<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_favorites">FavoritesActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie">Movie</string>
    <string name="series">Series</string>
    <string name="favorite">Favorite</string>
    <string name="change_language">Change language</string>
    <string name="name">Name</string>
    <string name="name_of_title">Name of title</string>
    <string name="release_date">Release date</string>
    <string name="title_of_release_date">title of release date</string>
    <string name="label_rating">Rating : %1s of 5</string>
    <string name="rating">Rating :</string>
    <string name="text_of_overview">text of overview</string>
    <string name="overview">Overview</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="title_no_data">No favorite item</string>

    <!--    dialog builder-->
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="dialog_title_add">Add</string>
    <string name="dialog_title_remove">Remove</string>
    <string name="dialog_message_add">Add To Favorites?</string>
    <string name="dialog_message_remove">Remove from favorites?</string>
    <!--    dialog builder end-->
    <!--    toast-->
    <string name="sukses_add">Add Succsessfully</string>
    <string name="sukses_delete">Delete Succsessfully</string>
    <string name="sukses_fail">Delete failed</string>
    <string name="list_item">List</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="reminder">Reminder</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_text">empty</string>
    <string name="release_today_reminder">Release Today Reminder</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="daily_reminder_description">Remind you to back to Movie Catalogue every 7 AM</string>
    <string name="release_today_reminder_description">Remind you what movies are release today every 8 AM</string>
    <string name="daily_notif_message">Movie Catalogue is missing you!</string>
    <string name="has_been_release">%s has been release today!</string>
    <string name="favorite_widget">Favorite Widget</string>
    <string name="alarm_turned_on">%s turned on</string>
    <string name="alarm_turned_off">%s turned off</string>
    <!--    toastend-->

</resources>
