<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_list">

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.subdico.moviecatalogue4.ui.ListItemFragment"
        android:label="@string/list_item"
        tools:layout="@layout/main_layout_recyclerview" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.subdico.moviecatalogue4.ui.FavoritesFragment"
        android:label="@string/favorite"
        tools:layout="@layout/main_layout" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.subdico.moviecatalogue4.ui.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

</navigation>