<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_vertical_margin"
        tools:context=".DetailActivity">

        <ImageView
            android:id="@+id/img_detail"
            android:layout_width="170dp"
            android:layout_height="210dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/name"
            style="@style/TextAppearance.Label"
            android:textAppearance="@style/TextAppearance.Label"
            app:layout_constraintBottom_toBottomOf="@+id/img_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.024"
            app:layout_constraintStart_toEndOf="@+id/img_detail"
            app:layout_constraintTop_toTopOf="@+id/img_detail"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/detail_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:text="@string/name_of_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/release_date"
            style="@style/TextAppearance.Label"
            android:textAppearance="@style/TextAppearance.Label"
            app:layout_constraintStart_toStartOf="@+id/detail_name"
            app:layout_constraintTop_toBottomOf="@+id/detail_name" />

        <TextView
            android:id="@+id/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:text="@string/title_of_release_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/rating_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/label_rating"
            style="@style/TextAppearance.Label"
            android:textAppearance="@style/TextAppearance.Label"
            app:layout_constraintStart_toStartOf="@+id/img_detail"
            app:layout_constraintTop_toBottomOf="@+id/img_detail" />

        <RatingBar
            android:id="@+id/rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:isIndicator="true"
            android:max="5"
            android:stepSize="0.1"
            app:layout_constraintStart_toStartOf="@+id/rating_label"
            app:layout_constraintTop_toBottomOf="@+id/rating_label" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/overview"
            style="@style/TextAppearance.Label"
            android:textAppearance="@style/TextAppearance.Label"
            app:layout_constraintStart_toStartOf="@+id/rating_bar"
            app:layout_constraintTop_toBottomOf="@+id/rating_bar" />

        <TextView
            android:id="@+id/overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/text_of_overview"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

