<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_margin="3dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="1dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:contentDescription="@string/favorite"
            android:id="@+id/img_btn_fav"
            android:layout_width="45dp"
            android:layout_height="42dp"
            android:background="@android:color/transparent"
            android:scaleType="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_keyboard_arrow_right" />

        <ImageView
            android:id="@+id/img_fav"
            android:layout_width="130dp"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/favorite"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp"
            tools:src="@color/colorAccent" />

        <RatingBar
            android:id="@+id/rating_bar_fav"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:isIndicator="true"
            android:max="5"
            android:stepSize="0.1"
            app:layout_constraintStart_toStartOf="@+id/tv_release_fav"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_fav" />

        <TextView
            android:id="@+id/tv_name_fav"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/name"
            app:layout_constraintEnd_toStartOf="@+id/img_btn_fav"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/img_fav"
            app:layout_constraintTop_toTopOf="@+id/img_fav" />

        <TextView
            android:id="@+id/tv_release_fav"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/release_date"
            app:layout_constraintEnd_toStartOf="@+id/img_btn_fav"
            app:layout_constraintStart_toStartOf="@+id/tv_name_fav"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_fav" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>